corpus/c/syntax/case-09/snapshots/gcc9_12/native_text_capture/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.c:2:10: error: [syntax] expected ')' before '{' token
src/main.c: In function 'main':
    2 |     if (1 {
      |        ~ ^~
      |          )
want: )
near: { token
| src/main.c:2:10
|     if (1 {
|          ^

src/main.c:5:1: error: [syntax] expected expression before '}' token
    5 | }
      | ^
want: expression
near: } token
| src/main.c:5:1
| }
| ^